# city-bike-pipeline

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
airflow/: Dockerfile  entrypoint.sh
config/: ingestion.logconf
dags/: ingest.py
ingestion/: Dockerfile  city_bike.py  models.py  pipeline.py  utils.py
