[project]
name = "city-bike-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.3",
    "fire>=0.7.0",
    "pandas>=2.2.3",
    "psycopg2",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.4",
    "requests>=2.32.3",
    "ruff>=0.8.4",
    "tenacity>=9.0.0",
]
